python-api/k8s/ingress/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com  # Hostname for the Ingress
      http:
        paths:
          - path: /app1   # Route traffic with /app1 path to app1-service
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /app2   # Route traffic with /app2 path to app2-service
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
